src/test/ui/const-generics/generic-function-call-in-array-length.min.stderr
error: generic parameters must not be used inside of non-trivial constant values
  --> $DIR/generic-function-call-in-array-length.rs:9:39
   |
LL | fn bar<const N: usize>() -> [u32; foo(N)] {
   |                                       ^ non-trivial anonymous constants must not depend on the parameter `N`
   |
   = help: it is currently only allowed to use either `N` or `{ N }` as generic constants

error: generic parameters must not be used inside of non-trivial constant values
  --> $DIR/generic-function-call-in-array-length.rs:12:13
   |
LL |     [0; foo(N)]
   |             ^ non-trivial anonymous constants must not depend on the parameter `N`
   |
   = help: it is currently only allowed to use either `N` or `{ N }` as generic constants

error: aborting due to 2 previous errors

